Bug 1357952 - update WebRenderAPI to allow index in add_raw_font. r=jrmuizel